--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Learning node, express and mongoDB",
   "main": "app.js",
   "scripts": {
-    "start:dev": "nodemon server.js",
+    "start": "nodemon server.js",
     "start:prod": "NODE_ENV=production nodemon server.js"
   },
   "repository": {
@@ -19,8 +19,9 @@
   "homepage": "https://github.com/Varshil-Shah/nodejs-bootcamp#readme",
   "dependencies": {
     "dotenv": "^16.0.0",
-    "morgan": "^1.10.0",
-    "express": "^4.17.3"
+    "express": "^4.17.3",
+    "mongoose": "^5.13.14",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "eslint": "^8.13.0",
