--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/Varshil-Shah/nodejs-bootcamp#readme",
   "dependencies": {
+    "argon2": "^0.28.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "mongoose": "^5.13.14",
