--- a/package.json
+++ b/package.json
@@ -22,13 +22,15 @@
     "argon2": "^0.28.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "express-mongo-sanitize": "^2.2.0",
     "express-rate-limit": "^6.4.0",
     "helmet": "^5.0.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.14",
     "morgan": "^1.10.0",
     "nodemailer": "^6.7.3",
-    "slugify": "^1.6.5"
+    "slugify": "^1.6.5",
+    "xss-clean": "^0.1.1"
   },
   "devDependencies": {
     "eslint": "^8.13.0",
