--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "mongoose": "^5.13.14",
     "morgan": "^1.10.0",
     "nodemailer": "^6.7.3",
+    "pug": "^3.0.2",
     "slugify": "^1.6.5",
     "xss-clean": "^0.1.1"
   },
