:see_no_evil: Update gitignore and .eslint file

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,6 +19,11 @@
     "no-return-await": "off",
     "no-underscore-dangle": "off",
     "class-methods-use-this": "off",
+    "parser": "babel-eslint",
+    "parserOptions": {
+      "sourceType": "module",
+      "allowImportExportEverywhere": true
+    },
     "prefer-destructuring": [
       "error",
       {
