--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.7.3",
     "pug": "^3.0.2",
+    "sharp": "^0.31.0",
     "slugify": "^1.6.5",
     "xss-clean": "^0.1.1"
   },
