--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "pug": "^3.0.2",
     "sharp": "^0.31.0",
     "slugify": "^1.6.5",
+    "stripe": "^7.0.0",
     "xss-clean": "^0.1.1"
   },
   "devDependencies": {
