--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.7.3",
+    "nodemon": "^3.0.1",
     "pug": "^3.0.2",
     "sharp": "^0.31.0",
     "slugify": "^1.6.5",
