--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "helmet": "^5.0.2",
     "hpp": "^0.2.3",
     "html-to-text": "^8.2.1",
+    "imagekit": "^4.1.3",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.14",
     "morgan": "^1.10.0",
