--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "hpp": "^0.2.3",
     "html-to-text": "^8.2.1",
     "imagekit": "^4.1.3",
+    "ioredis": "^5.3.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.14",
     "morgan": "^1.10.0",
