Add configuration for redis cache

--- a/config.example.env
+++ b/config.example.env
@@ -24,6 +24,8 @@ JWT_COOKIE_EXPIRES_IN=
 
 LOCAL_REDIS_HOST=
 REDIS_PORT=
+REDIS_URL=
+REDIS_CACHE_EXPIRE=
 
 IMAGE_KIT_PUBLIC_KEY=
 IMAGE_KIT_PRIVATE_KEY=
